--- a/views/pages/editTask.ejs
+++ b/views/pages/editTask.ejs
@@ -19,11 +19,7 @@
       <label for="name">Name:</label> <br>
       <input name="name" value="<%=task.name %>"><br>
       <label for="complete">Completed: </label>
-      <% if (task.completed) { %>
-        <input type="checkbox" name="complete" value="true" checked><br><br>
-        <% } else { %>
-          <input type="checkbox" name="complete" value="false"><br><br>
-          <% } %>
+      <input type="checkbox" name="complete" value="true" <%= task.completed ? "checked" : "" %> >
             <button type="submit">Update</button>
     </form>
     </div>
